@@ -19,6 +19,7 @@ label-bottom-left=Bottom/Left:
 label-camera-trackers=Trackers
 label-center=Center:
 label-entity-info=Show entity info
+label-always-day=Always daytime
 label-framerate=Frame rate:
 label-name=Name:
 label-position=Position:
@@ -43,6 +44,7 @@ camera-add=Create new camera,
 camera-delete=Delete selected camera.
 camera-enable=Enable/Disable camera taking screenshots.
 camera-entity-info=Show entity information (recipes) in the screenshots.
+camera-always-day=Render in daylight, regardless of the time of day.
 camera-framerate=Number of frames per second that your movie is going to be (often/default 25 fps).
 camera-speedgain=Amount (factor) that the timelapse movie should speed up compared to actual time.
 camera-refresh=Recalculate the camera settings. (due to rounding issues the actual values might differ a little)
