@@ -54,6 +54,15 @@ function Main.tick()
                 screenshotNumber = game.tick
             end
 
+            -- override the daytime if we are always day, otherwise leave it unaltered
+            local alwaysDay
+            if camera.alwaysDay then
+                -- take screenshot at full light
+                alwaysDay = 0
+            else
+                alwaysDay = nil
+            end
+
             game.take_screenshot {
                 by_player = player,
                 surface = camera.surfaceName or game.surfaces[1],
@@ -64,7 +73,7 @@ function Main.tick()
                     , camera.saveName),
                 show_entity_info = camera.entityInfo,
                 allow_in_replay = true,
-                daytime = 0 -- take screenshot at full light
+                daytime = alwaysDay
             }
 
             ::nextCamera::
